	* Fixed argument for find_user() in sync_cflag()
	* Changed KickUser(), added variable argument for reason
	* Changed CHAN KICK, added kicker's nick in the reason
	* Fixed NULL pointer dereference in p_setchan()
	* Fixed pl_command strcmp, replaced hardcoded value by sizeof()
	* Fixed format string vuln in sendmail() function
	* Fixed race condition in m_nick(), guest was not removed

*** 1.3 ***

--- Adds:
	* Improved timebans system
	* Added OPER GLINEALL command
	* Added cflags on NICK INFO (for own nick if user, all if oper)
	* Added CHAN BANLIST and CHAN CLEARBANS
	* Added topic saving and enforcing support
	* Added fakeusers list
	* Added OPER GLINECHAN command
	* Added fakeusers in OPER STATS users count
	* Added chanflags support
	* New MySQL column in child_chan_access (uflags int not null)
	* Added usermask and timestamp for TOPIC raw in chan_topic()

--- Bugfixes/Changes
	* match_mask() function is now case insensitive
	* Fixed sync_cflag() function (cflag->suspended issue)
	* Changed OPER SUSPEND command on user suspension, suspended user is now de-authed
	* Fixed authing problem after services reconnection
	* Fixed acl_resync() function (cflag->suspended issue)
	* Removed !tblist
	* !tb now accepts -1 as duration (permanent ban)
	* Fixed CHAN RESYNC, SUSPEND and UNSUSPEND args processing issue
	* Fixed m_eos() bug
	* Fixed duplicate fakeuser bug
	* Fixed m_stopic() issue, new topics were not saved
	* Fixed pidfile deleted after services restart
	* Fixed automatic channel deletion issue, checkexpired() now checks for members having an access
	* Removed spamscan.c and connect4.c from source tree
	* Fixed write_pid() issue, we're now writing the pid after daemonize()
	* Fixed OPER FAKENICK command, pointer reinserted in hashtable
	* Fixed wrong args number for NoticeToUser() in chan_kick()
	* Fixed !tb issue (users were able to tb higher-level users)
	* Fixed memleak in ConnectToServer()
	* Fixed output buffering issue in flush_sendq()