@@ -15,6 +15,7 @@
 	* Fixed pl_command strcmp, replaced hardcoded value by sizeof()
 	* Fixed format string vuln in sendmail() function
 	* Fixed race condition in m_nick(), guest was not removed
+	* Fixed superadmin handling with axxflags
 
 *** 1.3 ***
 
